feat: add update user service
